pkg/controller/service/testdata/router/expected.yaml.d/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: router-name
  namespace: app-created-namespace
  labels:
    acorn.io/app-name: app-name
    acorn.io/app-namespace: app-namespace
    acorn.io/managed: "true"
    acorn.io/router-name: router-name
spec:
  ports:
  - appProtocol: HTTP
    name: "80"
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    acorn.io/app-name: app-name
    acorn.io/app-namespace: app-namespace
    acorn.io/managed: "true"
    acorn.io/router-name: router-name
  type: ClusterIP
